--- a/pay/pay.css
+++ b/pay/pay.css
@@ -71,7 +71,7 @@ body{
 .center_class{
   display: flex;
   justify-content: space-between;
-  width: 96%;
+  width: 90%;
 margin: auto;
 }
 
@@ -420,12 +420,12 @@ background-image: url(data:image/svg+xml;base64,PHN2ZyBpZD0iTGF5ZXJfMSIgeG1sbnM9
 /* box1 *//* box1 *//* box1 *//* box1 *//* box1 *//* box1 *//* box1 */
 .box1{
   position: relative;
-  padding: 30px 0;
+  padding: 10px 0;
   padding-bottom: 50px;
 }
 
 .pay{
-  width: 96%;
+  width: 90%;
   margin: auto;
   padding: 10px 0px;
   border-radius:20px;
@@ -486,7 +486,7 @@ background-image: url(data:image/svg+xml;base64,PHN2ZyBpZD0iTGF5ZXJfMSIgeG1sbnM9
 }
 
 .name_ofstation{
-  width: 1000px;
+  width: 900px;
 }
 
 .Train_name_no p{
@@ -1046,8 +1046,7 @@ color: #BC1823;
   border-radius: 20px;
   box-sizing: border-box;
   padding: 20px;
-  width:1000px;
-
+  width:900px;
   box-shadow: 0 0 40px 10px #13152764;
 
 
@@ -1201,4 +1200,486 @@ top: -30px;
   margin-right: 5px; /* Adjust spacing between radio buttons */
   margin-top: 0px; /* Adjust spacing between radio buttons */
   font-weight: bolder;
+}
+
+.i_have-read{
+  display: flex;
+  justify-self: start;
+  width: 40px;
+  height: 40px;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  /* height: 40px; */
+  background-color: #303245;
+}
+.myCheckboxlabel {
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  color: #afafb7;
+  max-width: 500px;
+  left: 75px;
+  margin-top: 0px;
+  background-color: #303245;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.i_have-read:hover .myCheckboxlabel,.myCheckboxlabel:hover{
+  font-style: normal;
+color: white;
+}
+
+#myCheckbox{
+  align-self: center;
+  height: 15px;
+ margin: 0;
+
+}
+
+.Terms_and_Conditions_sender{
+  text-align: right;
+  color:#afafb7;
+  position: absolute;
+  padding: 7px;
+  right: 655px;
+
+  max-width: 500px;
+  margin-top: 0px;
+  background-color: #303245;
+  padding: 10px 20px;
+  font-style: italic;
+  border-radius: 10px;
+  transition: 0.2s ease-in-out;
+
+}
+
+.Terms_and_Conditions_sender:hover{
+  font-style: normal;
+color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.payment-title {
+  width: 100%;
+  text-align: center;
+}
+
+.form-container .field-container:first-of-type {
+  grid-area: name;
+}
+
+.form-container .field-container:nth-of-type(2) {
+  grid-area: number;
+}
+
+.form-container .field-container:nth-of-type(3) {
+  grid-area: expiration;
+}
+
+.form-container .field-container:nth-of-type(4) {
+  grid-area: security;
+}
+
+.field-container input {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.field-container {
+  position: relative;
+}
+
+.form-container {
+  display: grid;
+  grid-column-gap: 10px;
+  grid-template-columns: auto auto;
+  grid-template-rows: 90px 90px 90px;
+  grid-template-areas: "name name""number number""expiration security";
+  max-width: 400px;
+  padding: 20px;
+  
+  color: #ffffff;
+}
+
+label {
+  padding-bottom: 5px;
+  font-size: 18px;
+}
+
+input {
+  margin-top: 3px;
+  padding: 15px;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #dcdcdc;
+}
+
+.ccicon {
+  height: 38px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 10px);
+  width: 60px;
+}
+
+/* CREDIT CARD IMAGE STYLING */
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
+.container {
+  width: 100%;
+  max-width: 400px;
+  max-height: 251px;
+  height: 54vw;
+  padding: 20px;
+}
+
+#ccsingle {
+  position: absolute;
+  right: 15px;
+  top: 20px;
+}
+
+#ccsingle svg {
+  width: 100px;
+  max-height: 60px;
+}
+
+.creditcard svg#cardfront,
+.creditcard svg#cardback {
+  width: 100%;
+  -webkit-box-shadow: 1px 5px 6px 0px black;
+  box-shadow: 1px 5px 6px 0px black;
+  border-radius: 22px;
+}
+
+#generatecard{
+  cursor: pointer;
+  float: right;
+  font-size: 12px;
+  color: #fff;
+  padding: 2px 4px;
+  background-color: #020419;
+  border-radius: 4px;
+  cursor: pointer;
+  float:right;
+}
+
+/* CHANGEABLE CARD ELEMENTS */
+.creditcard .lightcolor,
+.creditcard .darkcolor {
+  -webkit-transition: fill .5s;
+  transition: fill .5s;
+}
+
+.creditcard .lightblue {
+  fill: #03A9F4;
+}
+
+.creditcard .lightbluedark {
+  fill: #0288D1;
+}
+
+.creditcard .red {
+  fill: #ef5350;
+}
+
+.creditcard .reddark {
+  fill: #d32f2f;
+}
+
+.creditcard .purple {
+  fill: #ab47bc;
+}
+
+.creditcard .purpledark {
+  fill: #7b1fa2;
+}
+
+.creditcard .cyan {
+  fill: #26c6da;
+}
+
+.creditcard .cyandark {
+  fill: #0097a7;
+}
+
+.creditcard .green {
+  fill: #66bb6a;
+}
+
+.creditcard .greendark {
+  fill: #388e3c;
+}
+
+.creditcard .lime {
+  fill: #d4e157;
+}
+
+.creditcard .limedark {
+  fill: #afb42b;
+}
+
+.creditcard .yellow {
+  fill: #ffeb3b;
+}
+
+.creditcard .yellowdark {
+  fill: #f9a825;
+}
+
+.creditcard .orange {
+  fill: #ff9800;
+}
+
+.creditcard .orangedark {
+  fill: #ef6c00;
+}
+
+.creditcard .grey {
+  fill: #3e50c4;
+}
+
+.creditcard .greydark {
+  fill: #151b44;
+}
+
+/* FRONT OF CARD */
+#svgname {
+  text-transform: uppercase;
+}
+
+#cardfront .st2 {
+  fill: #ffffff;
+}
+
+#cardfront .st3 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
+}
+
+#cardfront .st4 {
+  font-size: 54.7817px;
+}
+
+#cardfront .st5 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 400;
+}
+
+#cardfront .st6 {
+  font-size: 33.1112px;
+}
+
+#cardfront .st7 {
+  opacity: 0.6;
+  fill: #FFFFFF;
+}
+
+#cardfront .st8 {
+  font-size: 24px;
+}
+
+#cardfront .st9 {
+  font-size: 36.5498px;
+}
+
+#cardfront .st10 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 300;
+}
+
+#cardfront .st11 {
+  font-size: 16.1716px;
+}
+
+#cardfront .st12 {
+  fill: #4C4C4C;
+}
+
+/* BACK OF CARD */
+#cardback .st0 {
+  fill: none;
+  stroke: #725050;
+  stroke-miterlimit: 10;
+}
+
+#cardback .st2 {
+  fill: rgba(0, 0, 0, 0.762);
+}
+
+#cardback .st3 {
+  fill: #F2F2F2;
+}
+
+#cardback .st4 {
+  fill: #D8D2DB;
+}
+
+#cardback .st5 {
+  fill: #C4C4C4;
+}
+
+#cardback .st6 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 400;
+}
+
+#cardback .st7 {
+  font-size: 27px;
+}
+
+#cardback .st8 {
+  opacity: 0.6;
+}
+
+#cardback .st9 {
+  fill: #FFFFFF;
+}
+
+#cardback .st10 {
+  font-size: 24px;
+}
+
+#cardback .st11 {
+  fill: #EAEAEA;
+}
+
+#cardback .st12 {
+  font-family: 'Rock Salt', cursive;
+}
+
+#cardback .st13 {
+  font-size: 37.769px;
+}
+
+/* FLIP ANIMATION */
+.container {
+  perspective: 1000px;
+}
+
+.creditcard {
+  width: 100%;
+  max-width: 400px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  transition: -webkit-transform 0.6s;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
+  cursor: pointer;
+}
+
+.creditcard .front,
+.creditcard .back {
+  position: absolute;
+  width: 100%;
+  max-width: 400px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: antialiased;
+  color: #47525d;
+}
+
+.creditcard .back {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.creditcard.flipped {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+
+
+
+.box1,.nav{
+    filter: blur(10px);
+  }
+
+.box_pay_card{
+  position: absolute;
+  top: 0;
+  background-color: #000000bd;
+  /* filter: blur(10px); */
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+
+  display: flex;
+  justify-content: left;
+  
+}
+
+.payment-title{
+  position:absolute;
+  transform: translate(-50%,-50%);
+  top:25%;
+  left: 50%;
+  font-size: 30px;
+  font-weight: bolder;
+  color: white;
+}
+
+.container{
+  position:absolute;
+  transform: translate(-50%,-50%);
+  top:50%;
+  left: 38%;
+}
+
+.form-container{
+  position: absolute;
+  transform: translate(-50%,-50%);
+  top:50%;
+  left: 63%;
+}
+.form-container input{
+  color: #000;
 }
