--- a/pay/pay.css
+++ b/pay/pay.css
@@ -1774,7 +1774,16 @@ padding: 7.5px 0;
 
 
 /* invoice */
+.boddys.active{
+  display: block;
+  transition: 0.5s ease-in-out;
+}
+
+
 .boddys{
+  display: none;
+
+  transition: 0.5s ease-in-out;
   position: absolute;
   background-color: white;
   border: solid black 1px;
