--- a/reservation/reservation.css
+++ b/reservation/reservation.css
@@ -467,7 +467,7 @@ padding: 20px 0;
 }
 
 .RailX_card_heading{
-  font-size: 75px;
+  font-size: 55px;
   font-weight: bolder;
   line-height: 1;
   color: black;
@@ -1456,7 +1456,7 @@ color: #BC1823;
 border: 1px rgba(0, 0, 0, 0.457) solid;
 text-align: center;
 width: 250px;
-height: 75px;
+height: 55px;
 font-size: 32px;
 
 transition: 0.2s ease-in-out;
@@ -1485,7 +1485,7 @@ transition: 0.2s ease-in-out;
 .remove_file .but_option_CU{
   position: relative;
   width: 150px;
-  height: 75px;
+  height: 55px;
 
   font-size: 32px;
 
@@ -1499,10 +1499,10 @@ transition: 0.2s ease-in-out;
   margin-left: 10px;
 }
 .remove_file .but_option_CU_box{
-position: absolute;
+  position: absolute;
   width: 100%;
   height: 100%;
-  padding-top: 13px;
+  padding-top: 4px;
   transition: 0.2s ease-in-out;
 }
 
@@ -1515,7 +1515,7 @@ position: absolute;
   position: absolute;
   width: 100%;
   height: 100%;
-  padding-top: 13px;
+  padding-top: 4px;
   animation: background_color_change 2s infinite; 
 
 }
@@ -1527,12 +1527,12 @@ position: absolute;
 }
 
 
-.but_option_CU:hover .but_option_CU_box{
+.remove_file .but_option_CU:hover .but_option_CU_box{
   transform: translatex(150px);
 }
 
 #reservationDetails{
-  margin-top:-66px;
+  margin-top:-90px;
   margin-bottom:-30px;
   background-color: #00000011;
   border-radius: 10px;
